--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -17,48 +17,58 @@
             android:id="@+id/detail_iv_static_map"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:layout_margin="@dimen/fab_margin"/>
 
         <ImageView
             android:id="@+id/detail_iv_image"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="center"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:layout_margin="@dimen/fab_margin"/>
 
         <TextView
             android:id="@+id/detail_tv_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            style="@style/listRowTextOffice"/>
 
         <TextView
             android:id="@+id/detail_tv_address"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            style="@style/listRowText"/>
 
         <TextView
             android:id="@+id/detail_tv_distance"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            style="@style/listRowText"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_margin="@dimen/fab_margin">
 
             <Button
                 android:id="@+id/detail_btn_call"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:layout_weight="1"
-                android:text="@string/call_button" />
+                android:background="@color/hwBlue"
+                android:text="@string/call_button"
+                android:layout_marginRight="5dp"/>
 
             <Button
                 android:id="@+id/detail_btn_directions"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:layout_weight="1"
-                android:text="@string/directions_button" />
+                android:background="@color/hwBlue"
+                android:text="@string/directions_button"
+                android:layout_marginLeft="5dp"/>
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
