--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -8,12 +8,13 @@
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:scaleType="fitXY"
         android:src="@drawable/ic_title" />
+
     <TextView
         android:id="@+id/toolbar_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/color_white"
-        android:textStyle="bold"/>
+        style="@style/toolbarText"/>
 </android.support.v7.widget.Toolbar>
