--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -32,19 +32,25 @@
             android:id="@+id/detail_tv_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/listRowTextOffice"/>
+            style="@style/listRowTextOffice"
+            android:layout_marginRight="@dimen/fab_margin"
+            android:layout_marginLeft="@dimen/fab_margin"/>
 
         <TextView
             android:id="@+id/detail_tv_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/listRowText"/>
+            style="@style/listRowText"
+            android:layout_marginRight="@dimen/fab_margin"
+            android:layout_marginLeft="@dimen/fab_margin"/>
 
         <TextView
             android:id="@+id/detail_tv_distance"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/listRowText"/>
+            style="@style/listRowText"
+            android:layout_marginRight="@dimen/fab_margin"
+            android:layout_marginLeft="@dimen/fab_margin"/>
 
         <LinearLayout
             android:layout_width="match_parent"
